Update group names

--- a/project.config
+++ b/project.config
@@ -1,20 +1,20 @@
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
-	owner = group user/akroshchenko
+	owner = group user/Andrii Kroshchenko (akroshchenko)
 [access "refs/for/refs/*"]
-	read = group user/akroshchenko
-	push = group user/akroshchenko
-	label-Code-Review = -2..+2 group user/akroshchenko
-	label-Verified = -1..+1 group user/akroshchenko
-	rebase = group user/akroshchenko
-	removeReviewer = group user/akroshchenko
-	submit = group user/akroshchenko
+	read = group user/Andrii Kroshchenko (akroshchenko)
+	push = group user/Andrii Kroshchenko (akroshchenko)
+	label-Code-Review = -2..+2 group user/Andrii Kroshchenko (akroshchenko)
+	label-Verified = -1..+1 group user/Andrii Kroshchenko (akroshchenko)
+	rebase = group user/Andrii Kroshchenko (akroshchenko)
+	removeReviewer = group user/Andrii Kroshchenko (akroshchenko)
+	submit = group user/Andrii Kroshchenko (akroshchenko)
 [access "refs/heads/*"]
-	read = group user/akroshchenko
-	create = group user/akroshchenko
-	push = +force group user/akroshchenko
-	pushMerge = group user/akroshchenko
+	read = group user/Andrii Kroshchenko (akroshchenko)
+	create = group user/Andrii Kroshchenko (akroshchenko)
+	push = +force group user/Andrii Kroshchenko (akroshchenko)
+	pushMerge = group user/Andrii Kroshchenko (akroshchenko)
 [access "refs/tags/*"]
-	push = group user/akroshchenko
-	push = +force group user/akroshchenko
+	push = group user/Andrii Kroshchenko (akroshchenko)
+	push = +force group user/Andrii Kroshchenko (akroshchenko)
